--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Work Experience</p>
+              <p>Work Experience in Years</p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -252,7 +252,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
-              <p>DevOps Experience</p>
+              <p>DevOps Experience in Years</p>
             </div>
           </div><!-- End Stats Item -->
 
