--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/place/CAS+Total+Solutions/@27.700843,85.3222965,19.16z/data=!4m14!1m7!3m6!1s0x39eb19a8bf903c71:0xd273c008336cd99e!2sCAS+Total+Solutions!8m2!3d27.701135!4d85.322455!16s%2Fg%2F11btxj824_!3m5!1s0x39eb19a8bf903c71:0xd273c008336cd99e!8m2!3d27.701135!4d85.322455!16s%2Fg%2F11btxj824_?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
