--- a/resume.html
+++ b/resume.html
@@ -210,6 +210,7 @@
               </ul>
             </div><!-- Edn Resume Item -->
 
+            <p>As of 1st January 2025</p>
           </div>
 
         </div>
