--- a/resume.html
+++ b/resume.html
@@ -101,7 +101,7 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
               <h4>Mahesh Duwal</h4>
@@ -110,6 +110,7 @@
                 <li>Jhaukhel, Changunarayan-02, Bhaktapur Nepal</li>
                 <li>+977 9861239180</li>
                 <li>maheshduwal2@gmail.com</li>
+
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -151,6 +152,12 @@
               </div><!-- Edn Resume Item -->
 
           </div>
+
+          <h3 class="resume-title">Declaration</h3>
+          <div class="resume-item">
+             <p><em>I hereby declare that, mentioned details are correct to the best of my knowledge.
+              Date: 1st january 2025</em></p>
+             </div> <!-- Edn Resume Item -->
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
@@ -210,7 +217,6 @@
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <p>As of 1st January 2025</p>
           </div>
 
         </div>
