--- a/about.html
+++ b/about.html
@@ -342,14 +342,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Roshan Lasiwa</h3>
-                <h4>FullStack Developer</h4>
+                <h3>Gaurab Pokharel</h3>
+                <h4>Sr System Security Engieneer</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>I have known Mahesh for the past three years, and he is exceptionally skilled in his field.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
