--- a/about.html
+++ b/about.html
@@ -309,15 +309,15 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/anisha.jpg" class="testimonial-img" alt="">
                 <h3>Anisha Shrestha</h3>
-                <h4>DevOps Enginner</h4>
+                <h4>Sr. Cloud Architect</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span> A true cloud professional, his dedication and problem-solving skills makes him a valuable asset to any project.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
