--- a/about.html
+++ b/about.html
@@ -293,7 +293,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/suman.png" class="testimonial-img" alt="">
                 <h3>Suman karmacharya</h3>
                 <h4>Senior System Engineer</h4>
                 <div class="stars">
@@ -301,7 +301,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>uam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>An exceptional system engineer with a knack for optimizing and maintaining complex infrastructures seamlessly.His problem-solving skills and attention to detail ensure systems run smoothly and efficiently at all times.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -317,7 +317,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span> A true cloud professional, his dedication and problem-solving skills makes him a valuable asset to any project.</span>
+                  <span> A true cloud professional, his dedication and problem-solving skills makes him a valuable asset to any project. His expertise in AWS Cloud is unparalleled, consistently delivering innovative and efficient solutions to complex challenges.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -326,14 +326,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Rojan Shedian</h3>
-                <h4>Cloud Engineer</h4>
+                <h3>Rojina Shedian</h3>
+                <h4>Security Engineer</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>Their proactive approach and in-depth knowledge of cybersecurity ensure robust protection against emerging threats. He is highly skilled who excels at safeguarding systems with innovative strategies and best practices.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -341,7 +341,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/gaurab.png" class="testimonial-img" alt="">
                 <h3>Gaurab Pokharel</h3>
                 <h4>Sr System Security Engieneer</h4>
                 <div class="stars">
@@ -359,13 +359,13 @@
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>Anil Shrestha</h3>
-                <h4>Backend Developer</h4>
+                <h4>Developer</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                  <span> Collaborating with this DevOps engineer has been a game-changer. His automation expertise accelerates our deployment pipelines seamlessly. proactive approach to CI/CD implementation has drastically improved our workflow efficiency and code delivery speed. He bridges the gap between development and operations with precision, ensuring reliability and scalability at every stage.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
