--- a/about.html
+++ b/about.html
@@ -268,7 +268,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>Necessitatibus consectetur velit</p>
+        <p>Let's read some feedback from my colleagues.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
