--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/mahesh3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/mahesh3.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>System &amp; DevOps Engineer.</h2>
